# scraping-emails-mod

./: .env.example  .gitattributes  .gitignore  BRANCHES.md  CONTRIBUTING.md  Makefile  README.md  REPOSITORY_UPDATE_SUMMARY.md  STREAMLIT_UPDATE_SUMMARY.md  SUPABASE_SETUP.md  VERIFICATION_CHECKLIST.md  analyze_coverage.py  check_branch.py  check_crawl_progress.py  check_db_status.py  claude-plan.md  commands.bat  fix_path.bat  pyproject.toml  pytest_output.txt  requirements.txt  run_focused_crawl.py  run_gap_fill.py  run_local_scrape.py  streamlit_app.py  sync_to_supabase.py  verify_setup.py  yp_data_gap_report.md  yp_export_20260512 (3).csv
.github/workflows/: sync-docs.yml  test.yml
_bmad/: config.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
app/: acquisition_app.py  acquisition_data_access.py  crawl_plan.py  data_access.py  merge_preview.py  streamlit_app.py
data/: taxonomy_seed.json
docs/: BRANCH_COMPARISON.md  BRANCH_STRATEGY.md  QUICK_START.md  architecture-diagram.md  database-status-and-updates.md  streamlit-cloud-persistence.md  supabase-integration-summary.md  supabase-mcp-quick-reference.md
src/scraper/: __main__.py  acquisition_csv.py  acquisition_db.py  acquisition_policy.py  apollo_people_search.py  browser_client.py  cli.py  config.py  csv_writer.py  db.py  email_extract.py  fingerprint.py  http_client.py  mass_crawl.py  migrate_to_postgres.py  models.py  pipeline.py  postgres_db.py  postgres_writer.py  (+5 more)
tests/: conftest.py
(+48 files in other folders)
