[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.7",
    "cloudscraper>=1.2",
    "playwright>=1.44",
    "playwright-stealth>=1.0",
    "selectolax>=0.3",
    "parsel>=1.9",
    "email-validator>=2.1",
    "free-proxy>=1.1",
    "structlog>=24.1",
    "pydantic>=2.7",
    "typer>=0.12",
    "streamlit>=1.30",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-recording>=0.13",
    "vcrpy>=6.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
scraper = "scraper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires live network or services",
    "e2e: full end-to-end, slow, live network",
]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
